<resources>
    <string name="app_name">Fortune</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">First\nSelect fortune file source.</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>

    <string name="config_select_fortune">Select fortune file:</string>
    <string name="button_next">Next phrase</string>
    <string name="action_fortune_show">Start/Stop show</string>
    <string name="action_select_fortune">Select Fortune</string>
    <string name="dialog_message_load_fortune">Loading fortune file ...</string>
    <string name="dialog_message_load_title">Please wait</string>

    <string name="pref_maintext_size" translatable="false">pref_text_size</string>
    <string name="pref_maintext_size_defaukt" translatable="false">24</string>
    <string name="pref_maintext_size_title">Font size</string>
    <string name="pref_maintext_size_summary">Set the new Font size</string>
    <string name="pref_maintext_size_dialog_title">Enter font size (from 10 to 40)</string>

    <string name="pref_maintext_style" translatable="false">pref_text_style</string>
    <string name="pref_maintext_style_default" translatable="false">0</string>
    <string name="pref_maintext_style_title">Font style</string>
    <string name="pref_maintext_style_summary">Set the new Font style</string>
    <string name="pref_maintext_style_dialog_title">Select the new Font style</string>



    <string name="hint_of_day">Hint of day ...</string>
    <string name="about_title">About</string>
    <string name="version_info">Ver. :</string>
    <string name="version_num" translatable="false">1.0.15</string>
    <string name="about_info">Fortune is a simple program that displays a pseudorandom message from a database of quotations that first appeared in Version 7 Unix.</string>
    <string name="about_author_info">Author</string>
    <string name="about_author_name">Dmitry Starzenski</string>
    <string name="about_author_niknmae">StarDust</string>
    <string name="about_author_email">dmvstar@gmail.com</string>

    <string name="donate_info">Donate ... give me the money please ...</string>
    <string name="pref_slideshow_delay" translatable="false">pref_slideshow_delay</string>
    <string name="pref_slideshow_delay_title">Sleep time foor show</string>
    <string name="pref_slideshow_delay_summary">Sleep time foor show</string>
    <string name="pref_slideshow_delay_default" translatable="false">5000</string>
    <string name="pref_slideshow_delay_dialog_title">Input delay time (ms)</string>
    <string name="meaage_start_show">Slide show is begin ...</string>
    <string name="meaage_stop_show">Slide show is finish ...</string>


</resources>
