<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/text_bg_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:src="@drawable/help_about" />

            <TextView
                android:id="@+id/lb_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_orange_light"
                android:textStyle="bold"
                android:textSize="32dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/lbApplicationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />

            <TextView
                android:id="@+id/lbVersionVer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/version_info"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />

            <TextView
                android:id="@+id/lbVersionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/version_num"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_bright" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/lbAuthorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/about_author_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_bright" />

            <TextView
                android:id="@+id/lbAuthorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:paddingLeft="20dp"
                android:text="@string/about_author_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/holo_blue_bright" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/ivGPLV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/gpl_v3_logo_2_200x82" />

            <ImageView
                android:id="@+id/ivDonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClickImgMakeDonate"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:src="@drawable/donate_bt_3_3" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_info"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</ScrollView>